[0.2.1.0 - Beta	   xx/Mar/2008]
+ more drawing fixes
+ added some more extensions into opendialog filters
+ added registered pin details and media types
+ property-tree integrated with the filters form

[0.2.0.0 - Beta    04/Mar/2008]
+ added filter details form
+ added pin details form
+ WAVEFORMATEX, VIDEOINFOHEADER, VIDEOINFOHEADER2 and BITMAPINFOHEADER are supported
+ property page drawing issues fixed
+ fixed bug with non-functional favorite filter links
+ better filter name detection

[0.1.9.0 - Alpha   24/Feb/2008]
+ added automatic graph restart schedule (currently only for 04:00 AM :) - don't ask why)
+ added capability to construct graphs from XML files
+ added extension filters for opening dialogs
+ added option to display filter name instead of filename of a source/sink filter
+ added link to filters form into the favorites form
+ added DEL keyboard shortcut to delete filters and groups
+ non-existing filters are marked with a red "(!)"

[0.1.8.0 - Alpha   17/Feb/2008]
+ favorite filters and managing form now work
+ DMO filters are displayed in green color
+ KSProxy filters are displayed in orange color

[0.1.7.0 - Alpha   14/Feb/2008]
+ .grf extension is now added automatically when saving graph
+ "Render Media File" behavior changed to reset&clear exiting graph
+ added "Add Media File" that has the original "Render Media File" functionality
+ rendered files are now loaded into the recently used list
+ added shortcuts to Video and Audio renderers
+ fixed media type parsing
+ Windows XP fixes - at startup window does not flicker and move
+ warning sound is played when trying to remove filters from a running graph
+ added selection box to select multiple filters
+ added "Ctrl+D" shortcut to insert another instance(s) of currently selected filter(s)
+ added Increase/Decrease zoom level shortcuts
+ added favorite filters with subcategories (not ready)
+ added form to manage favorite filters (not ready)

[0.1.6.0 - Alpha   09/Feb/2008]